<resources>
    <string name="app_name">PocketKnowledge</string>
    <string name="errorAuth">Erro de autenticação. Faça login novamente.</string>
    <string name="errorFlashcard">Erro ao carregar flashcards...</string>
    <string name="connectionError">Falha na conexão...</string>
    <string name="userDataError">Erro ao buscar dados do utilizador.</string>
    <string name="serverConnectFail">Erro ao conectar ao servidor. Reinicie a aplicação.</string>
    <string name="categoriesError">Erro ao carregar temas...</string>
    <string name="fillUpAllCamps">Preencha todos os campos...</string>
    <string name="SuccFlashcard">Flashcard criado com sucesso.</string>
    <string name="errorCreatFlashcards">Erro ao criar flashcard.</string>
    <string name="adminCreateCards">Apenas administradores podem criar flashcards.</string>
    <string name="noFavorites">Não existem favoritos...</string>
    <string name="Noflashcard">Flashcard não encontrado.</string>
    <string name="eraseFlashcard">Flashcard apagado com sucesso!</string>
    <string name="favoriteFlashcardAdded">Flashcard adicionado aos favoritos!</string>
    <string name="errorFavoriteAdd">Erro ao adicionar flashcard aos favoritos.</string>
    <string name="RemoveFavoritesFlashcard">Flashcard removido dos favoritos!</string>
    <string name="errorRemoveFlashcard">Erro ao remover flashcard dos favoritos.</string>
    <string name="FillAllCamps">Preencha todos os campos...</string>
    <string name="FailLogin">Falha no login...</string>
    <string name="SessionExpired">Sessão expirada. Faça login novamente.</string>
    <string name="errorSessionsVerify">Erro ao verificar sessão. Faça login novamente.</string>
    <string name="redoLogin">Volte a fazer login.</string>
    <string name="differentPasswords">As passwords não coincidem...</string>
    <string name="userRegSucc">Utilizador registado com sucesso!</string>
    <string name="userRegError">Erro ao registar utilizador: %1$s</string>
    <string name="compEng">Engenharia Informática</string>
    <string name="subjectYear">Desenvolvimento de Aplicações Móveis - 3º Ano</string>
    <string name="aluno1">Daniel Marques - 24847</string>
    <string name="aluno2">Francisco Pires - 24865</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="regis_text">Ainda não tem conta? Registe-se!</string>
    <string name="register">Registo</string>
    <string name="email">Email</string>
    <string name="username">Nome de Utilizador</string>
    <string name="confirmPassword">Confirme a Password</string>
    <string name="existingAccount">Já tenho Conta!</string>
    <string name="createFlashcard">Criar Novo Flashcard</string>
    <string name="categories">Categorias</string>
    <string name="question">Pergunta</string>
    <string name="answer">Resposta</string>
    <string name="favorites">Favoritos</string>
    <string name="logout">Logout</string>
    <string name="defaultUser">Olá, utilizador!</string>
    <string name="erase">Apagar</string>
    <string name="changeFavoriteColor">Muda cor do botão dos favoritos</string>
    <string name="UnknownError">Ocorreu um erro desconhecido</string>
</resources>