<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- texto registo -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#00cccc"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textSize="40sp" />

    <!-- Campo Email -->
    <EditText
        android:id="@+id/emailField_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_field_round"
        android:hint="@string/email"
        android:padding="12dp"
        />

    <!-- Campo User -->
    <EditText
        android:id="@+id/UserField_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_field_round"
        android:hint="@string/username"
        android:padding="12dp"
        />


    <!-- Campo Password -->
    <EditText
        android:id="@+id/passwordField_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_field_round"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        />

    <!-- Campo Password Confirmar-->
    <EditText
        android:id="@+id/passwordConfField_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_field_round"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="12dp"
        />


    <!-- Botao de Registar -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00cccc"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="#FFF" />


    <!-- Botao de login -->
    <Button
        android:id="@+id/backtologinButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00b3b3"
        android:padding="12dp"
        android:text="@string/existingAccount"
        android:textColor="#FFF" />

</LinearLayout>